@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  namespace com.company {
    interface com.company.Movable {
        {abstract} + moveDown()
        {abstract} + moveLeft()
        {abstract} + moveRight()
        {abstract} + moveUp()
    }
  }
  

  namespace com.company {
    class com.company.MovableCircle {
        - radius : int
        + MovableCircle()
        + moveDown()
        + moveLeft()
        + moveRight()
        + moveUp()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.MovablePoint {
        ~ x : int
        ~ xSpeed : int
        ~ y : int
        ~ ySpeed : int
        + MovablePoint()
        + moveDown()
        + moveLeft()
        + moveRight()
        + moveUp()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.MovableRectangle {
        + MovableRectangle()
        + moveDown()
        + moveLeft()
        + moveRight()
        + moveUp()
        + toString()
    }
  }
  

  com.company.MovableCircle .up.|> com.company.Movable
  com.company.MovableCircle o-- com.company.MovablePoint : center
  com.company.MovablePoint .up.|> com.company.Movable
  com.company.MovableRectangle .up.|> com.company.Movable
  com.company.MovableRectangle o-- com.company.MovablePoint : bottomRight
  com.company.MovableRectangle o-- com.company.MovablePoint : topLeft


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
